// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge All 1`] = `
.c1 {
  display: inline-block;
  background-color: hsl(210,55%,80%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

.c2 {
  display: inline-block;
  background-color: hsl(0,100%,74%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Текст
  </div>
  <div
    className="c2"
    type="accent"
  >
    Текст
  </div>
</div>
`;

exports[`Storyshots Components/Badge Basic 1`] = `
.c0 {
  display: inline-block;
  background-color: hsl(210,55%,80%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

<div
  className="c0"
>
  Текст
</div>
`;
